[package]
name = "reverse-registrar"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { path = "../../common" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
test_utils = { path = "../../test_utils" }
